--- a/cmd/gomakase/templates/init/cmd/server/main.go.tmpl
+++ b/cmd/gomakase/templates/init/cmd/server/main.go.tmpl
@@ -75,7 +75,7 @@ func main() {
 
 	// Landing page
 	router.GET("/", func(c *gin.Context) {
-		c.HTML(http.StatusOK, "index.html", gin.H{"title": "Home"})
+		c.HTML(http.StatusOK, "index", gin.H{"title": "Home"})
 	})
 	router.GET("/health", func(c *gin.Context) {
 		c.JSON(http.StatusOK, gin.H{
@@ -90,9 +90,13 @@ func main() {
 	router.GET("/login", authHandler.LoginPage)
 	router.POST("/login", authHandler.Login)
 
+
 	protectedRoutes := router.Group("/")
 	protectedRoutes.Use(middleware.AuthMiddleware(authService, userAPIService))
 	protectedRoutes.DELETE("/logout", authHandler.Logout)
+	protectedRoutes.GET("/dashboard", func(c *gin.Context) {
+		c.HTML(http.StatusOK, "dashboard", gin.H{"title": "Dashboard"})
+	})
 
 	// --- 5. Server Setup ---
 	appLogger.Info("Starting server on port: ", "port", appConfig.Server.Port)
