--- a/cmd/gomakase/templates/init/internal/auth_context/domain/auth.entity.go.tmpl
+++ b/cmd/gomakase/templates/init/internal/auth_context/domain/auth.entity.go.tmpl
@@ -4,15 +4,29 @@ import (
 	"time"
 )
 
+type Provider string
+
+const (
+	ProviderTelegram Provider = "telegram"
+	ProviderWeb      Provider = "web"
+)
+
 type Auth struct {
 	AuthID    string
 	UserID    string
+	Provider  string
 	Token     string
 	ExpiresAt time.Time
 	CreatedAt time.Time
 }
 
-func NewAuth(authID string, userID string, token string, expiresAt time.Time) (*Auth, error) {
+func NewAuth(
+	authID string,
+	userID string,
+	token string,
+	provider Provider,
+	expiresAt time.Time,
+) (*Auth, error) {
 	if userID == "" {
 		return nil, ErrUserIDRequired
 	}
@@ -29,6 +43,7 @@ func NewAuth(authID string, userID string, token string, expiresAt time.Time) (*
 		AuthID:    authID,
 		UserID:    userID,
 		Token:     token,
+		Provider:  provider,
 		ExpiresAt: expiresAt,
 		CreatedAt: time.Now(),
 	}
