--- a/cmd/gomakase/templates/init/internal/auth_context/infrastructure/auth.schema.go.tmpl
+++ b/cmd/gomakase/templates/init/internal/auth_context/infrastructure/auth.schema.go.tmpl
@@ -4,8 +4,9 @@ import "time"
 
 type AuthSchema struct {
 	AuthID    string `gorm:"type:uuid;primaryKey"`
-	UserID    string `gorm:"type:uuid;unique"`
-	Token     string
+	UserID    string `gorm:"type:uuid;not null"`
+	Provider  string `gorm:"type:varchar(255);not null"`
+	Token     string `gorm:"type:text;not null"`
 	ExpiresAt time.Time
 	CreatedAt time.Time
 	UpdatedAt time.Time
