--- a/embed/schematics/project/templates/.air.toml.tmpl
+++ b/embed/schematics/project/templates/.air.toml.tmpl
@@ -5,7 +5,7 @@ tmp_dir = "tmp"
 [build]
   args_bin = []
   bin = "./tmp/main"
-  cmd = "npm run build:css && go build -o ./tmp/main ./cmd/server"
+  cmd = "npm run build:css && npm run build:js && go build -o ./tmp/main ./cmd/server"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "node_modules"]
   exclude_file = []
