--- a/embed/schematics/project/templates/Makefile.tmpl
+++ b/embed/schematics/project/templates/Makefile.tmpl
@@ -5,6 +5,7 @@ all: help
 build:
 	@echo "Building the application..."
 	@npm run build:css
+	@npm run build:js
 	@go build -o ./bin/main ./cmd/server
 
 run:
