--- a/embed/schematics/project/templates/package.json.tmpl
+++ b/embed/schematics/project/templates/package.json.tmpl
@@ -6,17 +6,21 @@
   "scripts": {
     "dev:css": "npx @tailwindcss/cli -i ./web/static/css/app.css -o ./web/static/css/output.css --watch",
     "build:css": "npx @tailwindcss/cli -i ./web/static/css/app.css -o ./web/static/css/output.css --minify --optimize",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:js": "esbuild web/static/js/src/main.js --bundle --watch --outfile=web/static/js/dist/app.js",
+    "build:js": "esbuild web/static/js/src/main.js --bundle --minify --outfile=web/static/js/dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "daisyui": "^5.0.50"
+    "daisyui": "^5.0.50",
+    "esbuild": "^0.25.10"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.12",
+    "alpinejs": "^3.15.0",
     "tailwindcss": "^4.1.12"
   }
 }
