return struct instead of interface

--- a/embed/schematics/context/templates/handler.go.tmpl
+++ b/embed/schematics/context/templates/handler.go.tmpl
@@ -13,8 +13,8 @@ type {{ .ContextName | title }}Handler struct {
 func New{{ .ContextName | title }}Handler(
     logger logger.Logger,
     {{ .ContextName | lower }}Service application.{{ .ContextName | title }}Service,
-) *{{ .ContextName | title }}Handler {
-	return &{{ .ContextName | title }}Handler{
+) {{ .ContextName | title }}Handler {
+	return {{ .ContextName | title }}Handler{
 		logger:                logger,
 		{{ .ContextName | lower }}Service:             {{ .ContextName | lower }}Service,
 	}
