--- a/embed/schematics/plugins/auth/templates/auth.handler.go.tmpl
+++ b/embed/schematics/plugins/auth/templates/auth.handler.go.tmpl
@@ -75,6 +75,10 @@ func (h *AuthHandler) Login(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
+	if user == nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid email or password"})
+		return
+	}
 
 	c.SetCookie("token", user.Auth.Token, 3600*24*30*12, "/", "", false, true)
 	c.JSON(http.StatusOK, gin.H{"message": "Login successful"})
