--- a/embed/schematics/project/templates/docker-compose.yaml.tmpl
+++ b/embed/schematics/project/templates/docker-compose.yaml.tmpl
@@ -9,12 +9,36 @@ services:
       context: .
       dockerfile: Dockerfile
     restart: unless-stopped
+    depends_on:
+      - {{.Module}}-db
     ports:
       - 8080:8080      
     env_file:
       - .env
     networks:
       - archnet
+  {{ .Module }}-db:
+    container_name: {{ .Module }}-db
+    image: postgres:14.5-alpine3.21
+    command: ["-p", "5432"]
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+    ports:
+      - 5432:5432
+    restart: always
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: password # change this to a strong password
+      POSTGRES_DB: {{ .Module }}
+    volumes:
+      - ./db:/var/lib/postgresql/data
+    networks:
+      - archnet
+
+volumes:
+  db:
 
 networks:
   archnet:
