Patch up some bugs and add a 404 page
- fix logout when no user is found
- add comment to the package to statisfy linter
- remove global loading from the alpine script
- add respective loading states to the components

--- a/embed/schematics/plugins/auth/templates/auth.service.go.tmpl
+++ b/embed/schematics/plugins/auth/templates/auth.service.go.tmpl
@@ -1,3 +1,4 @@
+// Package application
 package application
 
 import (
@@ -149,6 +150,10 @@ func (s *authService) Logout(userID string) error {
 	if err != nil {
 		return err
 	}
+
+  if user == nil {
+    return nil
+  }
 
 	return s.authRepository.RemoveAuth(user.Auth)
 }
