--- a/embed/schematics/context/templates/repository_impl.go.tmpl
+++ b/embed/schematics/context/templates/repository_impl.go.tmpl
@@ -1,3 +1,4 @@
+// Package infrastructure
 package infrastructure
 
 import (
@@ -12,5 +13,5 @@ type {{ .ContextName | lower }}Repository struct {
 }
 
 func New{{ .ContextName | title }}Repository(db *gorm.DB, logger logger.Logger) {{ .ContextName | lower }}Repository {
-	return &{{ .ContextName | lower }}Repository{db: db, logger: logger}
+	return {{ .ContextName | lower }}Repository{db: db, logger: logger}
 }
